--- a/rules.html
+++ b/rules.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>КМН - Правила</title>
+    <title>КМН - Правила турнира</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,42 +21,154 @@
 
     <main class="main">
         <div class="page-header">
-            <h1>Правила турнира</h1>
-            <p>Ознакомьтесь с правилами перед участием</p>
+            <h1>Правила турнира КМН</h1>
+            <p>Сервер работает до полного уничтожения одной из команд • 3 жизни на игрока</p>
         </div>
 
         <div class="rules-content">
+            <!-- Раздел 1 -->
             <div class="rules-section">
-                <h2>📋 Общие положения</h2>
-                <ul class="rules-list">
-                    <li>Турнир проводится 5 декабря 2025 года</li>
-                    <li>Участники должны установить официальную сборку</li>
-                    <li>Запрещено использование читов и посторонних модов</li>
-                    <li>Организатор вправе дисквалифицировать участника за нарушение правил</li>
-                </ul>
+                <div class="rules-header">
+                    <div class="rules-icon">⚔️</div>
+                    <h2>Игровой процесс</h2>
+                </div>
+                <div class="rules-list">
+                    <div class="rule-item">
+                        <div class="rule-number">1.1</div>
+                        <div class="rule-content">
+                            <h4>Система смертей</h4>
+                            <p>Если игрок умрет 3 раза, его заблокируют на данном сезоне.</p>
+                            <div class="rule-note">
+                                <strong>🎯 Стратегия:</strong> Распределяйте жизни carefully!
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rule-item">
+                        <div class="rule-number">1.2</div>
+                        <div class="rule-content">
+                            <h4>Командные убийства</h4>
+                            <p>Убивать игроков в своей команде = -2 жизни.</p>
+                            <div class="rule-note">
+                                <strong>⚠️ Внимание:</strong> Предательство дорого стоит
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rule-item">
+                        <div class="rule-number">1.3</div>
+                        <div class="rule-content">
+                            <h4>Цель игры</h4>
+                            <p>Сервер работает до тех пор, пока одна команда полностью не уничтожит другую.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
+            <!-- Раздел 2 -->
             <div class="rules-section">
-                <h2>🎮 Игровой процесс</h2>
-                <ul class="rules-list">
-                    <li>Следуйте инструкциям организатора во время турнира</li>
-                    <li>Запрещено мешать другим участникам</li>
-                    <li>Технические вопросы решаются через Telegram бота</li>
-                </ul>
+                <div class="rules-header">
+                    <div class="rules-icon">🔍</div>
+                    <h2>Взаимодействие с клиентом игры</h2>
+                </div>
+                <div class="rules-info-card">
+                    <h4>👁️ Умная система мониторинга</h4>
+                    <p>Наша умная система, с помощью некоторых модов, сканирует ваш клиент Minecraft и отправляет информацию на сервер. Если она заметит что-то подозрительное - вот последствия:</p>
+                </div>
+                <div class="rules-list">
+                    <div class="rule-item severe">
+                        <div class="rule-number">2.1</div>
+                        <div class="rule-content">
+                            <h4>Использование читов</h4>
+                            <p><strong>БАН и недопуск ко всем сезонам игры.</strong></p>
+                            <div class="rule-note warning">
+                                <strong>🚫 Обнаружение:</strong> Любые читы, модификации клиента, читаклии
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rule-item">
+                        <div class="rule-number">2.2</div>
+                        <div class="rule-content">
+                            <h4>Удаление модов из сборки</h4>
+                            <p>Предупреждение и невозможность подключиться к серверу.</p>
+                            <div class="rule-note">
+                                <strong>💡 Рекомендация:</strong> Наказания нет, но лучше не удаляйте моды
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rule-item">
+                        <div class="rule-number">2.3</div>
+                        <div class="rule-content">
+                            <h4>Добавление дополнительных модов</h4>
+                            <p>Без согласия владельца запрещено. Согласие можно получить в <a href="https://t.me/kmn_contacta15bot" class="rules-link">Telegram боте</a>.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
+            <!-- Раздел 3 -->
             <div class="rules-section">
-                <h2>⚖️ Нарушения и санкции</h2>
-                <ul class="rules-list">
-                    <li>Использование читов - пожизненная дисквалификация</li>
-                    <li>Неспортивное поведение - предупреждение или дисквалификация</li>
-                    <li>Опоздание более чем на 15 минут - недопуск к турниру</li>
-                </ul>
+                <div class="rules-header">
+                    <div class="rules-icon">👤</div>
+                    <h2>Взаимодействие с аккаунтами</h2>
+                </div>
+                <div class="rules-list">
+                    <div class="rule-item severe">
+                        <div class="rule-number">3.1</div>
+                        <div class="rule-content">
+                            <h4>Смена ника после блокировки</h4>
+                            <p>Даже не пытайтесь при блокировке аккаунта менять ник - вас заблокируют на всех сезонах.</p>
+                            <div class="rule-note warning">
+                                <strong>🚫 Система:</strong> Отслеживает UUID, а не никнейм
+                            </div>
+                        </div>
+                    </div>
+                    <div class="rule-item severe">
+                        <div class="rule-number">3.2</div>
+                        <div class="rule-content">
+                            <h4>Вход на аккаунты других игроков</h4>
+                            <p>Карается недопуском ко всем сезонам + уведомление владельцу аккаунта.</p>
+                            <div class="rule-note warning">
+                                <strong>⚠️ Детект:</strong> Мы вычислим кто заходил. Возможно, вас даже в жизни тот человек, на аккаунт которого заходили, НАКАЖЕТ :)
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="note">
-                <p><strong>Примечание:</strong> Правила могут быть дополнены. Следите за обновлениями в Telegram канале.</p>
-                <a href="https://t.me/+n7H85VgrOCc3NzAy" class="button" target="_blank">Подписаться на обновления</a>
+            <!-- Раздел 4 -->
+            <div class="rules-section">
+                <div class="rules-header">
+                    <div class="rules-icon">🛡️</div>
+                    <h2>Взаимодействие с сервером</h2>
+                </div>
+                <div class="rules-list">
+                    <div class="rule-item">
+                        <div class="rule-number">4.1</div>
+                        <div class="rule-content">
+                            <h4>Умная система безопасности</h4>
+                            <p>Сервер использует продвинутые алгоритмы для обнаружения нечестной игры и нарушений.</p>
+                        </div>
+                    </div>
+                    <div class="rule-item">
+                        <div class="rule-number">4.2</div>
+                        <div class="rule-content">
+                            <h4>Техническая поддержка</h4>
+                            <p>При возникновении проблем обращайтесь в <a href="https://t.me/kmn_contacta15bot" class="rules-link">Telegram бот</a>.</p>
+                        </div>
+                    </div>
+                    <div class="rule-item">
+                        <div class="rule-number">4.3</div>
+                        <div class="rule-content">
+                            <h4>Резервные копии и логи</h4>
+                            <p>Все действия игроков записываются для разрешения спорных ситуаций.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="final-note">
+                <h3>📝 Важная информация</h3>
+                <p>Правила могут дополняться. Следите за обновлениями в <a href="https://t.me/+n7H85VgrOCc3NzAy" class="rules-link">Telegram канале</a>.</p>
+                <p>Участвуя в турнире, вы автоматически соглашаетесь со всеми правилами.</p>
             </div>
         </div>
     </main>
