--- a/instrinstall.html
+++ b/instrinstall.html
@@ -27,9 +27,20 @@
 
         <div class="download-section">
             <h2>📥 Скачайте сборку</h2>
-            <a href="sborka_kmn.zip" class="download-button" download>
-                ⬇️ Скачать сборку КМН
+            <p>Нажмите кнопку ниже, чтобы скачать архив со сборкой КМН</p>
+            
+            <a href="https://release-assets.githubusercontent.com/github-production-release-asset/1106870220/6236ffde-a7d3-4d10-91f3-d851dbd01cd6?sp=r&sv=2018-11-09&sr=b&spr=https&se=2025-12-04T12%3A41%3A18Z&rscd=attachment%3B+filename%3Dsborka_kmn.zip&rsct=application%2Foctet-stream&skoid=96c2d410-5711-43a1-aedd-ab1947aa7ab0&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skt=2025-12-04T11%3A40%3A53Z&ske=2025-12-04T12%3A41%3A18Z&sks=b&skv=2018-11-09&sig=CPx5bLGc9rkdrcfKeya%2BWsGt%2B7yp0Loem3CFOOLzwo4%3D&jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJnaXRodWIuY29tIiwiYXVkIjoicmVsZWFzZS1hc3NldHMuZ2l0aHVidXNlcmNvbnRlbnQuY29tIiwia2V5Ijoia2V5MSIsImV4cCI6MTc2NDg1MzY4OSwibmJmIjoxNzY0ODUwMDg5LCJwYXRoIjoicmVsZWFzZWFzc2V0cHJvZHVjdGlvbi5ibG9iLmNvcmUud2luZG93cy5uZXQifQ.xgaoyTwo6pnrbg4ug5QLTKdpCkTx-NwlczaxsKYHvp8&response-content-disposition=attachment%3B%20filename%3Dsborka_kmn.zip&response-content-type=application%2Foctet-stream" 
+               class="download-button" 
+               download="sborka_kmn.zip">
+                ⬇️ Скачать сборку КМН (sborka_kmn.zip)
             </a>
+            
+            <div class="download-info">
+                <p><strong>📦 Размер:</strong> ~200 MB</p>
+                <p><strong>📅 Срок действия ссылки:</strong> до 4 декабря 2025 года</p>
+                <p><strong>⚠️ Важно:</strong> Скачивайте архив только с официальных источников</p>
+                <p class="note">Если ссылка не работает, обратитесь в <a href="https://t.me/kmn_contacta15bot">Telegram бот</a></p>
+            </div>
         </div>
 
         <div class="instructions">
@@ -73,6 +84,9 @@
                 <div class="step-content">
                     <h3>Запустите игру</h3>
                     <p>Запустите Minecraft через ваш лаунчер и присоединяйтесь к турниру!</p>
+                    <div class="server-info">
+                        <p><strong>IP сервера:</strong> <code>lists-se.gl.joinmc.link</code></p>
+                    </div>
                 </div>
             </div>
         </div>
